--- a/style.css
+++ b/style.css
@@ -7,3 +7,9 @@ body {
     width: 1000px;
     height: 550px;
 }
+
+#calculator {
+    width: 320px;
+    height: 520px;
+    background-color: #eaedef;
+}
