--- a/style.css
+++ b/style.css
@@ -44,3 +44,14 @@ body {
 #keyboard {
     height: 400px;
 }
+
+.operator, .number, .empty {
+    width: 50px;
+    height: 50px;
+    margin: 15px;
+    float: left;
+    border-radius: 50%;
+    border-width: 0;
+    font-weight: bold;
+    font-size: 15px;
+}
