--- a/style.css
+++ b/style.css
@@ -55,3 +55,19 @@ body {
     font-weight: bold;
     font-size: 15px;
 }
+
+.number, .empty {
+    background-color: #eaedef;
+}
+
+.number, .operator {
+    cursor: pointer;
+}
+
+.operator:active, .number:active {
+    font-size: 13px;
+}
+
+.operator:focus, .number:focus, .empty:focus {
+    outline: 0;
+}
