--- a/style.css
+++ b/style.css
@@ -1,13 +1,10 @@
 body{
 	font-family: 'Open Sans',sans-serif;
-	background-color: black;
+    background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(bg.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
-#container{
-	width: 1000px;
-	height: 550px;
-	background-image: linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)), url(bg.jpg);
-	margin: 20px auto;	
-}
+
 #calculator{
 	width: 320px;
 	height: 520px;
